--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         <activity android:name=".activitys.RegisterActivity"/>
 
         <activity android:name=".activitys.LoginActivity"/>
+
+        <activity android:name=".activitys.MainActivity"/>
     </application>
 
 </manifest>
