--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.htt.personallife">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activitys.ChatListActivity">
-            <!--android:theme="@style/ImageTranslucentTheme">-->
+        <activity android:name=".activitys.WelcomeActivity"
+            android:theme="@style/ImageTranslucentTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,6 +28,10 @@
         <activity android:name=".activitys.LoginActivity"/>
 
         <activity android:name=".activitys.MainActivity"/>
+
+        <activity android:name=".views.multiphotopicker.ui.activitys.PhotoPagerActivity"/>
+
+        <activity android:name=".views.multiphotopicker.ui.activitys.PhotoPickerActivity"/>
     </application>
 
 </manifest>
