--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
 
 
     <application
+        android:name=".app.PersonalLifeApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -32,6 +33,8 @@
         <activity android:name=".views.multiphotopicker.ui.activitys.PhotoPagerActivity"/>
 
         <activity android:name=".views.multiphotopicker.ui.activitys.PhotoPickerActivity"/>
+
+        <activity android:name=".views.ucrop.UCropActivity"/>
     </application>
 
 </manifest>
