--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,6 @@
             android:theme="@style/ImageTranslucentTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -29,6 +28,8 @@
         <activity android:name=".activitys.LoginActivity"/>
 
         <activity android:name=".activitys.MainActivity"/>
+
+        <activity android:name=".activitys.ChatListActivity"/>
 
         <activity android:name=".views.multiphotopicker.ui.activitys.PhotoPagerActivity"/>
 
