--- a/imuilibrary/build.gradle
+++ b/imuilibrary/build.gradle
@@ -21,10 +21,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:24.2.0'
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support:support-annotations:24.2.0'
+    compile files('libs/smack-android-4.1.8.jar')
+    compile files('libs/smack-android-extensions-4.1.8.jar')
 }
