--- a/imuilibrary/src/main/AndroidManifest.xml
+++ b/imuilibrary/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.htt.imlibrary">
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
 
